[package]
name = "randseqsum"
description = "A simple library+binary crate to find a random integer sequence that sums up to some value."
repository = "https://github.com/Maxxls/randseqsum"
version = "0.1.0"
authors = ["maximxls"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
